#508 - Add deletedDate to soft-deleted documents and remove it on restore